pipelinefiles/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: marketplace-authentication
  name: marketplace-authentication
  namespace: marketplace-authentication-service
spec:
  replicas: 1
  selector:

    app: marketplace-authentication
    deploymentconfig: marketplace-authentication
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
    type: Recreate
  template:
    metadata:
      labels:
        app: marketplace-authentication
        deploymentconfig: marketplace-authentication
    spec:
      containers:
        - image: docker-registry.default.svc:5000/marketplace-authentication-service/marketplace-authentication
          imagePullPolicy: Always
          name: marketplace-authentication
          ports:
            - containerPort: 8080
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - marketplace-authentication
        from:
          kind: ImageStreamTag
          name: 'marketplace-authentication:latest'
          namespace: marketplace-authentication-service
      type: ImageChange
