pipelinefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: marketplace-authentication
  name: marketplace-authentication
  namespace: marketplace-authentication-service
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: marketplace-authentication
  type: ClusterIP
