pipelinefiles/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: elog-authentication
  name: elog-authentication
  namespace: elog-authentication-service
spec:
  host: elog-authentication-maxis.nagadpay.com 
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: elog-authentication
    weight: 100
  wildcardPolicy: None
